--- a/PersistenceTests/PersistenceTests.csproj
+++ b/PersistenceTests/PersistenceTests.csproj
@@ -6,7 +6,7 @@
     <ProjectGuid>{F6C6B4E8-5C2D-46D4-82EB-E80B17AE3934}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PersistenceTests</RootNamespace>
+    <RootNamespace>AndrewD.EntityPlus.Persistence</RootNamespace>
     <AssemblyName>PersistenceTests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -58,6 +58,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CollectionMergerTests.Stubs.cs" />
     <Compile Include="CollectionMergerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
